# IOT-SMART-SOCKET

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/i2cdev/: i2cdev_legacy.c
components/pcf8574/: pcf8574.c
main/: CMakeLists.txt  app_main.c
